--- a/main/home/templates/home.html
+++ b/main/home/templates/home.html
@@ -1283,130 +1283,62 @@ home-style1
      
       <section class="tc-testimonials-style1 pb-60">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-    <div class="advc-card card-gray overflow-hidden wow fadeInUp slow" data-wow-delay="0.2s">
-        <div class="title mb-40">
-            <div class="row align-items-center">
-                <div class="col-lg-8">
-                    <h3 class="fsz-30">خبرنامه</h3>
-                    <p class="text-muted mt-2">با عضویت در خبرنامه از آخرین مقالات و تخفیف‌ها مطلع شوید</p>
-                </div>
-                <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
-                    <a href="{% url 'blog:bloglist' %}" class="more-btn fsz-14 text-uppercase fw-500">
-                        مشاهده همه مقالات <i class="fal fa-angle-left ms-1"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-        
-        
-        <!-- مقالات اخیر -->
-        <div class="blog-slider">
-            <h5 class="mb-3 fw-bold">مقالات اخیر</h5>
-            <div class="swiper-wrapper">
-                {% for post in post %}
-                <div class="swiper-slide">
-                    <div class="advc-item">
-                        <div class="img">
-                            <img alt="{{ post.title }}" class="img-cover" src="{{ post.image.url }}">
+            <div class="row justify-content-center"> <!-- اضافه کردن justify-content-center -->
+                <div class="col-lg-8"> <!-- تغییر عرض به 8 ستون -->
+                    <div class="advc-card card-gray overflow-hidden wow fadeInUp slow" data-wow-delay="0.2s">
+                        <div class="title mb-40">
+                            <div class="row align-items-center">
+                                <div class="col-lg-8">
+                                    <h3 class="fsz-30">مقالات اخیر</h3>
+                                    <p class="text-muted mt-2">جدیدترین مطالب و مقالات آموزشی</p>
+                                </div>
+                                <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
+                                    <a href="{% url 'blog:bloglist' %}" class="more-btn fsz-14 text-uppercase fw-500">
+                                        مشاهده همه مقالات <i class="fal fa-angle-left ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="info">
-                            <h6>
-                                <a class="fsz-18 fw-bold hover-blue1" href="{% url 'blog:blogdetail' post.slug %}">
-                                    {{ post.title|truncatewords:8 }}
-                                </a>
-                            </h6>
-                            <small class="fsz-12 color-666 float-text">
-                                {{ post.jalali_publish }} در
-                                <a class="color-000 text-uppercase" href="{% url 'blog:bloglist' %}?category={{ post.category.slug }}">
-                                    {{ post.category.title }}
-                                </a>
-                            </small>
+                        
+                        <!-- مقالات اخیر -->
+                        <div class="blog-slider">
+                            <div class="swiper-wrapper">
+                                {% for post in post %}
+                                <div class="swiper-slide">
+                                    <div class="advc-item">
+                                        <div class="img">
+                                            <img alt="{{ post.title }}" class="img-cover" src="{{ post.image.url }}">
+                                        </div>
+                                        <div class="info">
+                                            <h6>
+                                                <a class="fsz-18 fw-bold hover-blue1" href="{% url 'blog:blogdetail' post.slug %}">
+                                                    {{ post.title|truncatewords:8 }}
+                                                </a>
+                                            </h6>
+                                            <small class="fsz-12 color-666 float-text">
+                                                {{ post.jalali_publish }} در
+                                                <a class="color-000 text-uppercase" href="{% url 'blog:bloglist' %}?category={{ post.category.slug }}">
+                                                    {{ post.category.title }}
+                                                </a>
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% empty %}
+                                <div class="swiper-slide">
+                                    <div class="alert alert-info">مقاله‌ای یافت نشد</div>
+                                </div>
+                                {% endfor %}
+                            </div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
                         </div>
                     </div>
                 </div>
-                {% empty %}
-                <div class="swiper-slide">
-                    <div class="alert alert-info">مقاله‌ای یافت نشد</div>
-                </div>
-                {% endfor %}
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-    </div>
-</div>
-            <div class="col-lg-6">
-              <div
-                class="testimonials-box card-gray overflow-hidden wow fadeInUp slow"
-                data-wow-delay="0.4s"
-              >
-                <div class="title mb-40">
-                  <div class="row align-items-center">
-                    <div class="col-lg-8">
-                      <h3 class="fsz-30">بلندگوهای پرفروش</h3>
-                    </div>
-                    <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
-                      <div class="arrows">
-                        <a class="swiper-prev" href="#0">
-                          <i class="fal fa-chevron-left"></i>
-                        </a>
-                        <a class="swiper-next" href="#0">
-                          <i class="fal fa-chevron-right"></i>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="testi-card">
-                  <div class="rate mb-20">
-                    <div class="stars">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
-                    <h6 class="fsz-18 fw-bold">
-                      حمل و نقل سریع و قیمت انعطاف پذیر!
-                    </h6>
-                  </div>
-                  <div class="text fsz-14 mb-50">
-                    من قبلاً تجربه خرید را در سکوی زیادی به عنوان Amozon ، Eboy
-                    ، Esto و غیره تجربه می کردم و آن بازار Swoo را واقعاً عالی
-                    می دیدم. این اولین انتخاب من برای هر تجربه خرید خواهد بود.
-                    قیمت رقابتی ، حمل و نقل سریع و پشتیبانی 24/7. بسیار توصیه می
-                    شود!
-                  </div>
-                  <div class="btm-items">
-                    <div class="user-info">
-                      <div class="img">
-                        <img alt="" src="{% static 'img/user.jpg ' %}" />
-                        <span class="icon"> <i class="fas fa-check"></i> </span>
-                      </div>
-                      <div class="inf">
-                        <h6 class="fsz-18 fw-bold">
-                          Drake N.<small
-                            class="fsz-10 color-green1 ms-1 text-uppercase"
-                            >خریدار تأیید شده</small
-                          >
-                        </h6>
-                        <p class="fsz-12 color-666">بروکلین ، لس آنجلس</p>
-                      </div>
-                    </div>
-                    <a
-                      class="text-capitalize color-blue1 text-decoration-underline fsz-11 fw-600"
-                      href="#"
-                      >بلندگو Marshall Standmore / سیاه</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
+
       <!--  End testimonials  -->
       
 </main>
