--- a/main/products/templates/products.html
+++ b/main/products/templates/products.html
@@ -216,7 +216,7 @@ home-style3 sin-prod-pg-1
                   <div class="products">
                     <div class="row">
                         {% if catname %}
-                          <input type="hidden" id="cat_slug" name="category" value="{{catname}}">
+                          <input type="hidden" id="cat_slug" name="category" value="{{catname.id}}">
                         {% endif %}
                         
                         <div id="product-list" 
